--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-youtube": "^7.9.0"
+    "react-spinners-kit": "^1.9.0",
+    "react-youtube": "^7.9.0",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
